<resources>
    <string name="app_name">MemoryGame</string>

    <string name="play_button">Play (Unfinished)</string>
    <string name="rules_button">Rules</string>
    <string name="da_rules">DA RULES:</string>
    <string name="rule1">
        1. The user is shown 20 tiles. Hidden below these tiles are 10 random images each repeated
        twice.
    </string>
    <string name="rule2">
        2. The user can touch on any two tiles. Touching on a tile will show the image.
    </string>
    <string name="rule3">
        3. If the two tiles have matching images, they disappear. The user gets a point.
    </string>
    <string name="rule4">
        4. If the two tiles do NOT have matching images, they flip over to being tiles again.
    </string>

</resources>
